[package]
name = "invaders"
version = "0.1.0"
authors = [ "Elijah Koulaxis" ]
edition = "2022"
description = "Open source terminal arcade game with audio - based off of the classic 'Space Invaders'"
readme = "README.md"
keywords = [ "terminal", "game", "audio", "rusty" ]
categories = [ "games", "command-line-utilities" ]
license = "MIT"

[dependencies]
crossterm = "0.23.2"
rusty_audio = "1.2"
rusty_time = "0.11"
cfg-if = "1.0.0"
